--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/react-fontawesome": "^0.1.4",
     "dotenv": "^8.2.0",
     "gatsby": "^2.4.3",
+    "gatsby-cli": "^3.0.0",
     "gatsby-image": "^2.0.41",
     "gatsby-plugin-catch-links": "^2.0.13",
     "gatsby-plugin-config": "^1.0.7",
